objects/Apttus_DocuApi__DocuSignUser__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Apttus_DocuApi__ContactLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact Lookup System only user.(For contact search to get Email and Title) as recipient</description>
        <label>Contact Lookup</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DocuSignUsers</relationshipLabel>
        <relationshipName>DocuSignUsersContactLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__CurrentSyncJobState__c</fullName>
        <description>Docusign envelope status sync job state.</description>
        <inlineHelpText>Docusign envelope status sync job state.</inlineHelpText>
        <label>CurrentSyncJobState</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WAITING</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>EXECUTING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This DocuSign is credential is will be used as default OAuth info to handle SFDC Organization wide needs</description>
        <inlineHelpText>This DocuSign is credential is will be used as default OAuth info to handle SFDC Organization wide needs</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocuSignAccountId__c</fullName>
        <description>DocuSign Account Id from DocuSign System</description>
        <inlineHelpText>DocuSign Account Id from DocuSign System</inlineHelpText>
        <label>DocuSign Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocuSignEmailAddress__c</fullName>
        <description>Email Address form DocuSign system</description>
        <inlineHelpText>Email Address form DocuSign system</inlineHelpText>
        <label>DocuSign Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocuSignServerEnvironment__c</fullName>
        <defaultValue>&quot;PROD&quot;</defaultValue>
        <description>DocuSign Server Environment</description>
        <inlineHelpText>DocuSign Server Environment</inlineHelpText>
        <label>DocuSign Server Environment</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocuSignUserName__c</fullName>
        <description>User name from DocuSign system</description>
        <inlineHelpText>User name from DocuSign system</inlineHelpText>
        <label>DocuSign User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__LastCompletedEnvelopeSyncTime__c</fullName>
        <description>DateTime to keep track of the last Successful Sync of Completed Envelopes
System use only not to be used on Layout</description>
        <inlineHelpText>System use only not to be used on Layout</inlineHelpText>
        <label>Last Sync Completed Envelope Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__LastEnvelopeStatusSyncTime__c</fullName>
        <description>Field is used by Apttus system internal to keep track of DocuSign status sync</description>
        <inlineHelpText>Field is used by Apttus system internal to keep track of DocuSign status sync</inlineHelpText>
        <label>Last Envelope Status Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__LastRecipientStatusSyncTime__c</fullName>
        <description>DateTime to keep track of the last Successful Sync of Envelopes Recipient status System use only not to be used on Layout</description>
        <inlineHelpText>DateTime to keep track of the last Successful Sync of Envelopes Recipient status System use only not to be used on Layout</inlineHelpText>
        <label>Last Recipient Status Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__LastSyncTime__c</fullName>
        <description>Field is used by Apttus system internal to keep track of DocuSign data sync</description>
        <inlineHelpText>Field is used by Apttus system internal to keep track of DocuSign data sync</inlineHelpText>
        <label>Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__OauthData__c</fullName>
        <description>DocuSign OAuth Data as JSON. I can be used with only Integrator Key from Apttus.</description>
        <inlineHelpText>DocuSign OAuth Data as JSON. I can be used with only Integrator Key from Apttus.</inlineHelpText>
        <label>OAuth Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__SyncStatusMessage__c</fullName>
        <description>DocuSign sync status message : Apttus system internal use only</description>
        <inlineHelpText>DocuSign sync status message : Apttus system internal use only</inlineHelpText>
        <label>Sync Status Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user who is registered/ Entered credential with DocuSign system</description>
        <inlineHelpText>The user who is registered/ Entered credential with DocuSign system</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSignUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DocuSign User</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus_DocuApi__All</fullName>
        <columns>Apttus_DocuApi__Default__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Apttus_DocuApi__User__c</columns>
        <columns>Apttus_DocuApi__DocuSignEmailAddress__c</columns>
        <columns>Apttus_DocuApi__DocuSignUserName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>